# MGTU

./: .gitignore
Exam_INF/1_sem/online_store/: .gitignore  CMakeLists.txt
Exam_INF/1_sem/online_store/include/: Customer.h  DatabaseConnection.h  Order.h  PaymentStrategy.h  User.h
Exam_INF/1_sem/online_store/reports/: audit_report.csv
Exam_INF/1_sem/online_store/sql/: functions.sql  triggers.sql
Exam_INF/1_sem/online_store/src/: Order.cpp  main.cpp
Lab_INF/lab1/: lab1.cpp  lab1.sln  lab1.vcxproj  lab1task2.cpp
Lab_INF/lab1/lab1task1/: lab1.sln  lab1.vcxproj  lab1.vcxproj.filters
Lab_INF/lab1/lab1task2/: lab1task2.cpp  lab1task2.sln  lab1task2.vcxproj  lab1task2.vcxproj.filters
Lab_INF/lab2/Task 2/: even_numbers.sh
Lab_INF/lab2/Task 3/: multiply.sh
Lab_INF/lab2/Task 4/: running_processes.sh
Lab_INF/lab2/Task 5/: simple_client.sh
Lab_INF/lab3/: database.sql  dop_tasks.sql
Lab_INF/lab4/Restaurant/: Database.cpp  Database.h  (+3 more)
Lab_OAiP/lab2/: lab2.cpp
Lab_OAiP/lab3/: menu.txt  output.txt
Prac_Java/git-history-lab/: calculator.py  tests.py
Prac_Java/library-management-system/: .gitignore
RK2/Task2/: Task2.cpp
RK2_OAiP/: StringInstrument.h  catalog.txt  catalog_saved.txt  my_catalog.txt
Semester 1/Lab_INF/lab4/: .gitignore  CMakeLists.txt  README.md
Semester 1/Lab_INF/lab4/lab4/: Category.cpp  Category.h  Database.h  Dish.cpp  Order.h  Pair.h  Restaurant.slnx  lab4.cpp
Semester 1/RK2_OAiP/: BrassInstrument.cpp  BrassInstrument.h  MusicalInstrument.cpp  MusicalInstrument.h  RK2_OAiP.cpp  RK2_OAiP.slnx  StringInstrument.cpp
Task_INF/Homework1/: Report_Khramtsov_Artyom.doc  Report_Khramtsov_Artyom.docx  Script_Server.sh
Task_INF/Homework2/: customers.csv  dwh_company.sql
(+169 files in other folders)
